--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "prompt": "^1.3.0"
+    "prompt": "^1.3.0",
+    "xlsx": "^0.18.5"
   }
 }
